5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4159/executions/1593_2425.log
== TEST (2019-03-26 11:04:27) 
-- CODE:
dist = float(input("quilometragem: "))
gas = float(input("gasolina: "))
consumo = dist/gas
print(round(consumo, 3)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3)"km/l")
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:04:55) 
-- CODE:
dist = float(input("quilometragem: "))
gas = float(input("gasolina: "))
consumo = dist/gas
print(round(consumo, 3) "km/l")
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3) "km/l")
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:06:10) 
-- CODE:
dist = float(input("quilometragem: "))
gas = float(input("gasolina: "))
consumo = dist/gas
print(round(consumo, 3),"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:06:28) 
-- CODE:
dist = float(input("quilometragem: "))
gas = float(input("gasolina: "))
consumo = dist/gas
print(round(consumo, 3),"km/l")
-- EXECUTION TIME:
0.175121
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
